# mekistudio

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
docs/: ARCHITECTURE.md  IDEAS.md  ROADMAP.md  sandbox-isolation-research.md  tool-card-styles.md
docs/old/mekistudio/: 00-overview.md  01-tech-stack.md  02-architecture.md  03-state-on-disk.md  04-claude-bridge.md  05-canvas.md  06-worktrees.md  07-sandbox-docker.md
docs/old/mekistudio-lego/: 00-overview.md  01-brick-system.md  02-node-catalog.md  03-canvas-runtime.md
docs/superpowers/plans/: 2026-05-29-cables-wires.md  2026-05-29-mekistudio-2-walking-skeleton.md  2026-05-30-node-chat-claude-skeleton.md  2026-05-30-node-chat-tool-cards.md  (+7 more)
mekistudio/: cli.py
mekistudio/backend/: bootstrap.py  fs.py  git.py  models.py  paths.py
mekistudio/frontend/: app.py
scripts/: _g_serve.py  _repro_many.mjs  pw-cable-draw.mjs  pw-chat-impulses.mjs  pw-chat-reload.mjs  pw-chat-tools.mjs  pw-chat-v2.mjs  pw-f3-autospawn.mjs  pw-f3b-settings.mjs  pw-g-layout.mjs  pw-g-neuro.mjs  pw-g-stable.mjs  pw-g-territories.mjs  pw-g.mjs  pw-md-check.mjs  pw-md-stream.mjs  pw-spawn-layout.mjs  pw-subcanvas-drag.mjs  pw-subcanvas-hittest.mjs  pw-subcanvas.mjs  pw-terminal.mjs  pw-zone-layout.mjs
tests/integration/: test_sdk_hooks_smoke.py  test_sdk_smoke.py  test_sdk_tools_smoke.py
tests/unit/: test_app.py  test_bootstrap.py  test_chat_bridge.py  test_chat_events.py  test_chat_guard.py  test_chat_manager.py  test_chat_node.py  test_chat_options.py  test_chat_store.py  test_chat_ws.py  test_cli.py  test_components.py  test_fs.py  test_git.py  test_models.py  test_nodes.py  test_parenting.py  test_paths.py  test_terminal_bridge.py  test_terminal_ring.py  test_terminal_store.py  test_terminal_ws.py
trailer/: README.md  build.py  render.py  trailer.html
(+73 files in other folders)
