[project]
name = "mekistudio2"
version = "0.1.0"
description = "mekistudio-2 — AI dev studio, pur Python sans Docker."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Mekidesign Dev", email = "info@neuronys.com" }]
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "pydantic>=2.9",
    "typer>=0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "ruff>=0.7",
]

[project.scripts]
mekistudio = "packages.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["packages"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
