[project]
name = "mekistudio"
version = "0.3.0"
description = "mekistudio — AI dev studio, pur Python sans Docker, auto-hébergé."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Mekidesign Dev", email = "info@neuronys.com" }]
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "pydantic>=2.9",
    "typer>=0.13",
    "claude-agent-sdk>=0.2.87",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "ruff>=0.7",
    "pytest-asyncio>=1.4.0",
]

[project.scripts]
mekistudio = "mekistudio.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mekistudio"]

[tool.pytest.ini_options]
addopts = "-ra -m 'not integration'"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests qui lancent la vraie CLI claude (réseau/auth) ; exclus par défaut",
]
